# rssu_timetable_parser

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
mobile_app/: main.py
parser/: config.py  dateparser.py  timetableparser.py
src/app/: main.py
src/app/data/: groups.json  schedule.json  selected_group.json
src/app/kv/: my.kv
src/app/parser/: config.py  date_parser.py  getgroupslist.py  timetableparser.py
src/mobile_app/: main.py
src/mobile_app/data/: groups.json  schedule.json  selected_group.json
src/parser/: date_parser.py  getgroupslist.py  timetableparser.py
tests/: test_dateparser.py  test_grouplists.py  test_timetableparser.py
