[tool.poetry]
name = "timetable-parser"
version = "0.1.0"
description = ""
authors = ["marikudes <marikweinstein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pytest = "^8.3.4"
certifi = "^2025.1.31"
kivy = "^2.3.1"
types-requests = "^2.32.0.20250306"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
files = "parser,tests"
ignore_missing_imports = true
disallow_subclassing_any = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "D100",     # pydocstyle: undocumented-public-module
    "D101",     # pydocstyle: undocumented-public-class
    "D102",     # pydocstyle: undocumented-public-method
    "D103",     # pydocstyle: undocumented-public-function
    "D104",     # pydocstyle: undocumented-public-package
    "D105",     # pydocstyle: undocumented-magic-method
    "D106",     # pydocstyle: undocumented-public-nested-class
    "D107",     # pydocstyle: undocumented-public-init
    "D203",     # pydocstyle: one-blank-line-before-class
    "D213",     # pydocstyle: multi-line-summary-second-line
    "ANN002",	# flake8-annotations: missing-type-args
	"ANN003",	# flake8-annotations: missing-type-kwargs
    "ASYNC1",   # flake8-trio
    "S501",
    "S603",		# flake8-bandit: subprocess-without-shell-equals-true
	"S607",		# flake8-bandit: start-process-with-partial-path
	"DJ",		# flake8-django
	"EM",		# flake8-errmsg
    "G004",     # flake8-logging-format: logging-f-string
    "TD002",    # flake8-todos: missing-todo-author
    "TD003",    # flake8-todos: missing-todo-link
    "FIX",      # flake8-fixme
    "ERA001",   # eradicate: commented-out-code
	"PD",		# pandas-vet
	"PLR0911",	# pylint: too-many-return-statements
	"PLR0913",	# pylint: too-many-arguments
	"TRY003",	# tryceratops: raise-vanilla-args
	"NPY",		# numpy
	"AIR",		# airflow
	"RUF001",	# ruff: ambiguous-unicode-character-string
	"RUF002",	# ruff: ambiguous-unicode-character-docstring
	"RUF003",	# ruff: ambiguous-unicode-character-comment
    "COM812"
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",     # flake8-bandit: assert
    "SLF001",   # flake8-self: private-member-access
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.pytest.ini_options]
pythonpath = [".", "parser"]
